[package]
name = "insomnia-blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.45", features = ["rt-multi-thread"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "time", "tls-rustls"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
bcrypt = "0.17"
time = { version = "0.3.41", features = ["serde"] }
tracing-subscriber = "0.3.19"
rand = "0.9.1"
serde_json = "1.0.140"
anyhow = "1.0.98"
